--- a/README.Rmd
+++ b/README.Rmd
@@ -27,7 +27,7 @@ The migbirdHarvestData package provides an easy-to-use set of R functions for th
 Tasks that can be accomplished with this package include:
 
 * `read_hip` imports data
-* `tidy` does basic reorganization tasks
+* `clean` does basic reorganization tasks
 * `findDuplicates` identifies registrants with multiple records
 * `fixDuplicates` consolidates duplicate records
 * `strataCheck` identifies any new strata
